kubernets/dev/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-hakuna-service
  namespace: hakuna-dev
  labels:
    app: hakuna-dev-app
    tier: ms-hakuna-nestjs
spec:
  type: ClusterIP
  selector:
    app: hakuna-dev-app
    tier: ms-hakuna-nestjs
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hakuna-dev
  name: ms-hakuna-nest
  labels:
    app: hakuna-dev-app
    tier: ms-hakuna-nestjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hakuna-dev-app
      tier: ms-hakuna-nestjs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hakuna-dev-app
        tier: ms-hakuna-nestjs
    spec:
      containers:
        - image: miguekos1233/ms-hakuna-nest:1.1
          name: ms-hakuna-nest
          resources:
            requests:
              cpu: "900m"
              memory: 256Mi
            limits:
              cpu: "900m"
              memory: 256Mi
          ports:
            - containerPort: 3000
