kubernets/dev/ingressKong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-hakuna-nest
  namespace: hakuna-dev
  annotations:
    konghq.com/strip-path: "false"
    # konghq.com/methods: "GET,POST"
    # konghq.com/plugins: "add-response-header"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /hakunadevms
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-hakuna-service
                port:
                  number: 80
